--- a/css/style.scss
+++ b/css/style.scss
@@ -1,21 +1,11 @@
-// colour palette
-$textColor: #222;
-$white: #FFF;
-$black: #222;
+@use "responsive" as rs;
+@use "colors" as c;
 
 // base size
 $base: 8px;
 
 // animations
-$timing: .2s;
-
-:root {
-    --textColor: #{$textColor};
-    --white: #{$white};
-    --black: #{$black};
-    --trueBlack: #000;
-    --trueWhite: #FFF;
-}
+$timing: .2s ease-in-out;
 
 html {
     scroll-behavior: smooth;
@@ -24,13 +14,15 @@ html {
 }
 
 body {
-    background: var(--white);
-    color: var(--textColor);
+    background-color: var(--color-neutral-5);
+    color: var(--color-neutral-0);
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    margin: 0;
+    padding: $base*2;
 }
 
-// landscape mode mobile devices+
-@media screen and (min-width: 600px) {
+// landscape mode AND mobile devices+
+@include rs.mq(600px) {
     main {
         margin: 0 auto;
         max-width: $base*160;
@@ -38,25 +30,24 @@ body {
 }
 
 // portrait tablets+
-@media screen and (min-width: 750px) {
+@include rs.mq(750px) {
     // CSS here
 }
 
 // landscape tablets+
-@media screen and (min-width: 1000px) {
+@include rs.mq(1000px) {
     // CSS here
 }
 
 // full-screen laptop+
-@media screen and (min-width: 1200px) {
+@include rs.mq(1200px) {
     // CSS here
 }
 
 // dark mode prefered
 @media (prefers-color-scheme: dark) {
     :root {
-        --textColor: #{$white};
-        --white: #{$black};
-        --black: #{$white};
+        background-color: var(--color-neutral-5);
+        color: var(--color-neutral-);
     }
 }
