orientation and min-max toggle added to media query builder
You can now optionally specify the orientation as part of your media query and override the default width from `min-width` to `max-width`

--- a/css/_mixins.scss
+++ b/css/_mixins.scss
@@ -1,5 +1,9 @@
-@mixin mq($min-size) {
-    @media screen and (min-width: #{$min-size}) {
+@mixin mq($size, $orientation: 0, $min-max: min) {
+    $mediaQueryOrientation: "and (#{$min-max}-width: #{$size})";
+    @if($orientation != 0) {
+        $mediaQueryOrientation: $mediaQueryOrientation + " and (orientation: #{$orientation})";
+    }
+    @media screen #{$mediaQueryOrientation} {
         @content;
     }
 }
