Introducing a default theme
* default pastel colour palette provided
* header/main/footer elements that belong to the body are all centred by the padding attribute so that they can bleed full width
* example header section still has a H1 but the paragraph has been reduced in size

--- a/css/_colors.scss
+++ b/css/_colors.scss
@@ -24,4 +24,18 @@ $colors: (
             --color-#{$color}-#{$prop}: hsl(#{$value});
         }
     }
+    --color-pastels-0: #98FF9855;
+    --color-pastels-1: #E6E6FA55;
+    --color-pastels-2: #FFE5B455;
+    --color-pastels-3: #B0E0E655;
+    --color-pastels-4: #F0808055;
+    --color-pastels-5: #FFB6C155;
+    --color-pastels-6: #87CEFA55;
+    --color-pastels-7: #FFFFE055;
+    --color-pastels-8: #98FB9855;
+    --color-pastels-9: #AFEEEE55;
+    --color-pastels-10: #DB709355;
+    --color-pastels-11: #BC8F8F55;
+    --color-pastels-12: #FFF5EE55;
+    --color-pastels-13: #F0FFF055;
 }
