--- a/css/_colors.scss
+++ b/css/_colors.scss
@@ -1,12 +1,16 @@
 $colors: (
     primary: (
+        -5: '20, 100%, 5%',
+        -4: '20, 100%, 10%',
         -3: '20, 100%, 20%',
         -2: '20, 100%, 30%',
         -1: '20, 100%, 40%',
         0: '20, 100%, 50%',
         1: '20, 100%, 60%',
         2: '20, 100%, 70%',
-        3: '20, 100%, 80%'
+        3: '20, 100%, 80%',
+        4: '20, 100%, 90%',
+        5: '20, 100%, 95%'
     ),
     neutral: (
         0: '0, 0%, 0%',
