--- a/css/style.css
+++ b/css/style.css
@@ -17,20 +17,21 @@
   --color-neutral-3: hsl(0, 0%, 60%);
   --color-neutral-4: hsl(0, 0%, 80%);
   --color-neutral-5: hsl(0, 0%, 100%);
-  --color-pastels-0: #98FF9855;
-  --color-pastels-1: #E6E6FA55;
-  --color-pastels-2: #FFE5B455;
-  --color-pastels-3: #B0E0E655;
-  --color-pastels-4: #F0808055;
-  --color-pastels-5: #FFB6C155;
-  --color-pastels-6: #87CEFA55;
-  --color-pastels-7: #FFFFE055;
-  --color-pastels-8: #98FB9855;
-  --color-pastels-9: #AFEEEE55;
-  --color-pastels-10: #DB709355;
-  --color-pastels-11: #BC8F8F55;
-  --color-pastels-12: #FFF5EE55;
-  --color-pastels-13: #F0FFF055;
+  --color-pastels-0: #98FF98;
+  --color-pastels-1: #E6E6FA;
+  --color-pastels-2: #FFE5B4;
+  --color-pastels-3: #B0E0E6;
+  --color-pastels-4: #F08080;
+  --color-pastels-5: #FFB6C1;
+  --color-pastels-6: #87CEFA;
+  --color-pastels-7: #FFFFE0;
+  --color-pastels-8: #98FB98;
+  --color-pastels-9: #AFEEEE;
+  --color-pastels-10: #DB7093;
+  --color-pastels-11: #BC8F8F;
+  --color-pastels-12: #FFF5EE;
+  --color-pastels-13: #F0FFF0;
+  --color-super-white: oklch(100% 0 0);
 }
 
 :root {
