--- a/css/style.css
+++ b/css/style.css
@@ -12,11 +12,25 @@
   --color-primary-4: hsl(20, 100%, 90%);
   --color-primary-5: hsl(20, 100%, 95%);
   --color-neutral-0: hsl(0, 0%, 0%);
-  --color-neutral-1: hsl(0, 0%, 20%);
-  --color-neutral-2: hsl(0, 0%, 40%);
-  --color-neutral-3: hsl(0, 0%, 60%);
-  --color-neutral-4: hsl(0, 0%, 80%);
-  --color-neutral-5: hsl(0, 0%, 100%);
+  --color-neutral-1: hsl(0, 0%, 10%);
+  --color-neutral-15: hsl(0, 0%, 15%);
+  --color-neutral-2: hsl(0, 0%, 20%);
+  --color-neutral-25: hsl(0, 0%, 25%);
+  --color-neutral-3: hsl(0, 0%, 30%);
+  --color-neutral-35: hsl(0, 0%, 35%);
+  --color-neutral-4: hsl(0, 0%, 40%);
+  --color-neutral-45: hsl(0, 0%, 45%);
+  --color-neutral-5: hsl(0, 0%, 50%);
+  --color-neutral-55: hsl(0, 0%, 55%);
+  --color-neutral-6: hsl(0, 0%, 60%);
+  --color-neutral-65: hsl(0, 0%, 65%);
+  --color-neutral-7: hsl(0, 0%, 70%);
+  --color-neutral-75: hsl(0, 0%, 75%);
+  --color-neutral-8: hsl(0, 0%, 80%);
+  --color-neutral-85: hsl(0, 0%, 85%);
+  --color-neutral-9: hsl(0, 0%, 90%);
+  --color-neutral-95: hsl(0, 0%, 95%);
+  --color-neutral-10: hsl(0, 0%, 100%);
   --color-pastels-0: #98FF98;
   --color-pastels-1: #E6E6FA;
   --color-pastels-2: #FFE5B4;
@@ -65,6 +79,11 @@
   --font-size-xs: .5rem;
 }
 
+/*
+**
+** ELEMENTS
+**
+*/
 html,
 body {
   margin: 0;
@@ -76,7 +95,7 @@ html {
 }
 
 body {
-  background-color: var(--color-neutral-5);
+  background-color: var(--color-neutral-10);
   color: var(--color-neutral-0);
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
@@ -102,6 +121,7 @@ header nav ul {
 header nav ul li {
   flex: 1;
   max-width: none;
+  white-space: nowrap;
 }
 header nav ul li:not(:first-child) {
   flex: 0;
@@ -118,6 +138,7 @@ main h6 {
 }
 
 footer {
+  margin-block: var(--size-6) 0;
   padding-block: var(--size-4) calc(env(safe-area-inset-bottom, 0) * 2 + var(--size-4));
 }
 
@@ -212,10 +233,11 @@ ul,
 ol {
   margin: 0;
   padding-block: 0 var(--size-4);
+  text-wrap: pretty;
 }
-p:has(+ p, + ul, + ol),
-ul:has(+ p, + ul, + ol),
-ol:has(+ p, + ul, + ol) {
+p:has(+ p, + ul, + ol, + iframe),
+ul:has(+ p, + ul, + ol, + iframe),
+ol:has(+ p, + ul, + ol, + iframe) {
   padding-block-end: var(--size-3);
 }
 
@@ -234,6 +256,45 @@ a {
 }
 a:hover, a:visited {
   color: var(--color-primary--1);
+}
+
+pre:has(> code) {
+  margin-block: 0 var(--size-5);
+}
+pre:has(> code) code {
+  background-color: var(--color-neutral-9);
+  border-radius: var(--size-0-5);
+  display: block;
+  padding: var(--size-1-5) var(--size-3);
+  white-space: pre-wrap;
+}
+
+code {
+  padding: var(--size-0-5) var(--size-1);
+}
+p code {
+  background-color: var(--color-neutral-9);
+  border-radius: var(--size-0-5);
+  display: inline;
+}
+
+abbr {
+  text-decoration-color: var(--color-neutral-7-5);
+  text-decoration-style: wavy;
+  cursor: help;
+}
+
+/*
+**
+** CLASSES
+**
+*/
+iframe.embedded-video {
+  aspect-ratio: 16/9;
+  border: var(--size-0-5) solid var(--color-primary-0);
+  box-sizing: border-box;
+  margin-block: 0 var(--size-4);
+  width: 100%;
 }
 
 @media screen and (min-width: 750px) {
