--- a/css/theme-default.scss
+++ b/css/theme-default.scss
@@ -14,6 +14,23 @@ footer {
         color: var(--color-neutral-5);
     }
 
+    header {
+        color: var(--color-neutral-0);
+    }
+
+    pre:has(> code) {
+        code {
+            background-color: var(--color-neutral-1);
+        }
+    }
+
+    code {
+        color: var(--color-neutral-95);
+        p & {
+            background-color: var(--color-neutral-1);
+        }
+    }
+
     footer {
         background-color: var(--color-neutral-1);
         color: var(--color-neutral-5);
