--- a/css/style.scss
+++ b/css/style.scss
@@ -223,10 +223,17 @@ pre:has(> code) {
     margin-block: 0 var(--size-5);
     code {
         background-color: var(--color-neutral-9);
-        border-radius: var(--size-0-5);
+        border: {
+            color: var(--color-neutral-9);
+            radius: var(--size-0-5);
+            style: solid;
+            width: var(--size-1-5) var(--size-3);
+        }
+        box-sizing: border-box;
         display: block;
-        padding: var(--size-1-5) var(--size-3);
-        white-space: pre-wrap;
+        max-width: 100%;
+        overflow: auto;
+        width: fit-content;
     }
 }
 
