--- a/css/style.scss
+++ b/css/style.scss
@@ -244,6 +244,9 @@ code {
         background-color: var(--color-neutral-9);
         border-radius: var(--size-0-5);
         display: inline;
+
+        box-decoration-break: clone;
+        -webkit-box-decoration-break: clone;
     }
 }
 
