--- a/css/style.css
+++ b/css/style.css
@@ -141,6 +141,9 @@ footer {
   margin-block: var(--size-6) 0;
   padding-block: var(--size-4) calc(env(safe-area-inset-bottom, 0) * 2 + var(--size-4));
 }
+footer a {
+  text-wrap: nowrap;
+}
 
 h1,
 h2,
@@ -191,13 +194,13 @@ li {
 }
 
 h1 {
-  font-size: var(--font-size-xxxxl);
+  font-size: clamp(var(--font-size-xxl), 100% + 5vi, var(--font-size-xxxxl));
   font-stretch: condensed;
   font-weight: 900;
 }
 
 h2 {
-  font-size: var(--font-size-xxl);
+  size: clamp(var(--font-size-xl), 100% + 5vi, var(--font-size-xxl));
 }
 
 h3:before,
@@ -239,6 +242,10 @@ p:has(+ p, + ul, + ol, + iframe),
 ul:has(+ p, + ul, + ol, + iframe),
 ol:has(+ p, + ul, + ol, + iframe) {
   padding-block-end: var(--size-3);
+}
+
+p {
+  text-wrap: pretty;
 }
 
 ul,
@@ -302,6 +309,22 @@ iframe.embedded-video {
   box-sizing: border-box;
   margin-block: 0 var(--size-4);
   width: 100%;
+}
+
+pre.skeleton-logo {
+  color: var(--color-neutral-10);
+  font-weight: 800;
+  line-height: 1.2;
+}
+
+footer:has(.skeleton-logo) {
+  display: grid;
+  gap: var(--size-2);
+  grid-template-columns: auto fit-content(10%);
+}
+footer:has(.skeleton-logo) pre.skeleton-logo {
+  margin: 0;
+  width: fit-content;
 }
 
 @media screen and (min-width: 750px) {
