--- a/css/theme-default.scss
+++ b/css/theme-default.scss
@@ -3,8 +3,8 @@ header {
 }
 
 footer {
-    background-color: var(--color-neutral-0);
-    color: var(--color-neutral-5);
+    background-image: linear-gradient(to bottom, var(--color-primary--5), var(--color-primary--4));
+    color: var(--color-neutral-8);
 }
 
 // dark mode prefered
