--- a/css/theme-default.scss
+++ b/css/theme-default.scss
@@ -3,7 +3,7 @@ header {
 }
 
 footer {
-    background-image: linear-gradient(to bottom, var(--color-primary--5), var(--color-primary--4));
+    background: var(--color-primary--5);
     color: var(--color-neutral-8);
 }
 
